--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
       transition: 0.3s;
     }
 
-    /* Dark Mode */
     body.dark-mode {
       background-color: var(--dark-bg);
       color: var(--dark-text);
@@ -39,19 +38,15 @@
 
     header {
       position: relative;
+      min-height: 400px;
+      text-align: center;
       color: var(--branco);
       padding: 80px 20px;
-      text-align: center;
+      background-image: url('banner-header.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       overflow: hidden;
-    }
-
-    header video {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -1;
     }
 
     header.dark-mode {
@@ -69,8 +64,16 @@
       max-width: 600px;
       margin-left: auto;
       margin-right: auto;
-      z-index: 1;
-      position: relative;
+    }
+
+    .video-fundo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
     }
 
     nav {
@@ -90,7 +93,7 @@
       cursor: pointer;
     }
 
-    nav a:hover {
+    nav a:hover, nav a.active {
       color: var(--azul-claro);
     }
 
@@ -196,18 +199,19 @@
       font-weight: bold;
       z-index: 1000;
     }
+
   </style>
 </head>
 <body>
   <button class="dark-toggle">Modo Escuro</button>
 
   <header id="inicio" class="active-section">
-    <video autoplay muted loop playsinline>
+    <video autoplay muted loop playsinline class="video-fundo">
       <source src="video-inicio.mp4" type="video/mp4">
     </video>
     <h1>A DOMINUS</h1>
     <p>Servidor oficial da comunidade <strong>A DOMINUS</strong> no Discord.</p>
-    <div style="margin-top:25px; display:flex; justify-content:center; align-items:center; gap:12px; position: relative; z-index: 1;">
+    <div style="margin-top:25px; display:flex; justify-content:center; align-items:center; gap:12px;">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg" alt="Discord Logo" width="40" style="filter: invert(1);">
       <span style="font-size:1.1rem; font-weight:bold;">Servidor do Discord</span>
     </div>
@@ -222,25 +226,27 @@
   </nav>
 
   <main class="container">
+    <!-- Início -->
     <section id="inicio" class="section active">
       <h2>Bem-vindo à A DOMINUS</h2>
       <p>Entre, divirta-se e faça amizades na nossa comunidade.</p>
     </section>
 
+    <!-- Sobre -->
     <section id="sobre" class="section">
       <h2>Introdução do Servidor</h2>
-      <p>O servidor <strong>A DOMINUS</strong> foi criado para pessoas que gostam de jogar em call com amigos, se divertir e criar times.</p>
+      <p>O servidor <strong>A DOMINUS</strong> foi criado para pessoas que gostam de jogar em call com amigos, se divertir e criar times. Aqui você encontra um ambiente amigável e colaborativo, onde qualquer jogador é bem-vindo.</p>
       <p>Jogamos títulos como <strong>Minecraft</strong>, <strong>Roblox</strong>, <strong>Rocket League</strong>, <strong>Free Fire</strong>, <strong>Fortnite</strong>, <strong>EOT</strong> e muitos outros.</p>
-      <!-- Novo card de história -->
+
       <div class="cards">
         <div class="card">
-          <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216" alt="História do Servidor">
           <h3>História do Servidor</h3>
-          <p>Tudo começou quando eu, Renan, junto com dois amigos, decidimos criar uma forma de reunir várias pessoas em um único espaço virtual. O objetivo era ajudar todos a desenvolverem suas habilidades sociais, superar comportamentos antissociais e criar novas amizades. Inicialmente, a primeira tentativa não obteve o sucesso desejado, mas não desistimos. Continuamos investindo nosso tempo e esforço no servidor, mantendo a mesma ideia de aproximar pessoas de diferentes lugares. <strong>A DOMINUS</strong> nasceu com a finalidade de criar conexões genuínas, permitir que as pessoas jogassem juntas e, acima de tudo, fortalecer amizades verdadeiras. Hoje, o servidor existe e prospera graças à dedicação de três pessoas visionárias, mostrando que união e persistência transformam sonhos em realidade.</p>
+          <p>O servidor A DOMINUS começou quando eu, Renan, junto com dois amigos, decidimos criar uma forma de reunir várias pessoas, incentivando a amizade e o desenvolvimento social. Na primeira tentativa não tivemos sucesso, mas continuamos investindo, e hoje o servidor existe graças à união desses três fundadores. A ideia sempre foi aproximar pessoas de todos os lugares, promovendo amizade verdadeira, comunicação e diversão.</p>
         </div>
       </div>
     </section>
 
+    <!-- Primeiro Espaço -->
     <section id="primeiro" class="section">
       <h2>Comunidade em Ação</h2>
       <div class="cards">
@@ -263,6 +269,7 @@
       </div>
     </section>
 
+    <!-- Ranking -->
     <section id="ranking" class="section">
       <h2>Ranking dos Jogadores</h2>
       <div class="cards">
@@ -294,6 +301,7 @@
       </div>
     </section>
 
+    <!-- Contato -->
     <section id="contato" class="section">
       <h2>Contato</h2>
       <p>Para parcerias, dúvidas ou sugestões, entre em contato pelo e-mail abaixo:</p>
@@ -307,13 +315,12 @@
   </footer>
 
   <script>
-    // Dark mode toggle
     const toggle = document.querySelector('.dark-toggle');
     toggle.addEventListener('click', () => {
       document.body.classList.toggle('dark-mode');
+      toggle.textContent = document.body.classList.contains('dark-mode') ? 'Modo Claro' : 'Modo Escuro';
     });
 
-    // Scroll animation
     const sections = document.querySelectorAll('.section');
     sections.forEach(sec => {
       sec.style.opacity = 0;
@@ -331,7 +338,6 @@
     }, { threshold: 0.2 });
     sections.forEach(sec => observer.observe(sec));
 
-    // Navegação entre abas
     const navLinks = document.querySelectorAll('nav a');
     navLinks.forEach(link => {
       link.addEventListener('click', () => {
@@ -345,3 +351,4 @@
   </script>
 </body>
 </html>
+
