--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="favicon.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A DOMINUS | Servidor do Discord, para jogar com amigos e fazer amizades</title>
+  <title>  DOMINUS | Servidor do Discord, para jogar com amigos e fazer amizades</title>
   <meta name="description" content="Site oficial do servidor A DOMINUS no Discord. Comunidade, novidades, amizade e destaques." />
   <meta name="keywords" content="A DOMINUS, Discord, servidor Discord, comunidade, games, tecnologia" />
   <meta name="author" content="Servidor A DOMINUS" />
@@ -204,7 +204,7 @@
 
   <header>
     <h1>A DOMINUS</h1>
-    <p>Servidor oficial da comunidade <strong>A DOMINUS</strong> no Discord.</p>
+    <p>Servidor oficial da comunidade <strong> DOMINUS</strong> no Discord.</p>
     <div style="margin-top:25px; display:flex; justify-content:center; align-items:center; gap:12px;">
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg" alt="Discord Logo" width="40" style="filter: invert(1);">
       <span style="font-size:1.1rem; font-weight:bold;">Servidor do Discord</span>
@@ -233,7 +233,7 @@
     <!-- Sobre -->
     <section id="sobre" class="section">
       <h2>Introdução do Servidor</h2>
-      <p>O servidor <strong>A DOMINUS</strong> foi criado para pessoas que gostam de jogar em call com amigos, se divertir e criar times. Aqui você encontra um ambiente amigável e colaborativo, onde qualquer jogador é bem-vindo.</p>
+      <p>O servidor <strong> DOMINUS</strong> foi criado para pessoas que gostam de jogar em call com amigos, se divertir e criar times. Aqui você encontra um ambiente amigável e colaborativo, onde qualquer jogador é bem-vindo.</p>
       <p>Jogamos títulos como <strong>Minecraft</strong>, <strong>Roblox</strong>, <strong>Rocket League</strong>, <strong>Free Fire</strong>, <strong>Fortnite</strong>, <strong>EOT</strong> e muitos outros.</p>
 
       <div class="cards">
@@ -257,7 +257,7 @@
         <div class="card">
           <img src="https://images.unsplash.com/photo-1605902711622-cfb43c44367f" alt="Pessoas jogando juntas">
           <h3>Entre no servidor</h3>
-          <p>Faça parte da comunidade A DOMINUS e comece sua jornada agora.</p>
+          <p>Faça parte da comunidade  DOMINUS e comece sua jornada agora.</p>
           <a href="https://discord.gg/GeZJnRpfcD" target="_blank" style="display:inline-block;margin-top:12px;padding:10px 14px;border-radius:10px;background:#0a1f44;color:#fff;font-weight:bold;text-decoration:none;">Entrar no Discord</a>
         </div>
         <div class="card">
